/* rfdiscovery.proto: describes the rfdiscovery object
 *
 * Author: Ghazanfar Ali <ghazanfar.ali@ttu.edu>, J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

message RFDiscoveryConfig {
    map<string, RFDiscoveryServer> servers = 1;
    string ip_url = 2;
    string agg_url = 3;
    string polling_interval = 4;
}

message RFDiscoveryServer {
    string name = 1;
    string ip    = 2;
    int32 port = 3;
}